# Twear-Back-end

./: db.sqlite3  manage.py  pyproject.toml
products/: admin.py  models.py  urls.py  views.py
twear/: asgi.py  settings.py  urls.py  wsgi.py
